--- a/server.html
+++ b/server.html
@@ -2155,10 +2155,11 @@
                     var padding = prepad.slice( -Math.abs( length ) );
                     return ( padding === hex );
                 },
-                listenForComms: async ( nostr_pubkey, network_string ) => {
+                listenForComms: async nostr_pubkey => {
                     var handleFunction = async message => {
                         var [ type, subId, event ] = JSON.parse( message.data );
                         if ( !event || event === true ) return;
+                        var network_string = hedgehog_server.network_string;
                         try {
                             event.content = await super_nostr.alt_decrypt( hedgehog_server.nostr_privkey, event.pubkey, event.content );
                             var json = JSON.parse( event.content );
@@ -2685,6 +2686,7 @@
 
                                 //save the data for later use
                                 //TODO: save the change address privkey for use later
+                                var network_string = hedgehog_server.network_string;
                                 var data_to_save = {
                                     utxos: utxos_ill_use || error,
                                     channel_pubkey_and_hash: {pubkey: channel_pubkey, hash: channel_hash},
@@ -2850,9 +2852,12 @@
                                 //add a buffer, because if you force close exactly 20 blocks before your inbound payment expires, you risk a race condition, as the first moment you can recover your money from your outbound payment is also the moment they get their money back, so if they sweep your payment with the preimage at that moment, and you grab the preimage from the blockchain (or mempool) and try to settle your inbound payment with it, in that same block they get to try to try to recover their money via the absolute timelock path, and then miners pick who actually gets the money, because that's a race condition
                                 var htlc_buffer = 10;
                                 //TODO: handle any errors returned by the fetch command below
-                                var bh_data = await fetch( `https://${hedgehog_server.explorer}/${hedgehog_server.network}api/blocks/tip/height` );
-                                var current_blockheight = await bh_data.text();
-                                var current_blockheight = Number( current_blockheight );
+                                var network_string = hedgehog_server.network_string;
+                                var my_network = network_string.split( "," );
+                                var current_blockheight = await chain_client.commander( my_network, "blockheight" );
+                                // var bh_data = await fetch( `https://${hedgehog_server.explorer}/${hedgehog_server.network}api/blocks/tip/height` );
+                                // var current_blockheight = await bh_data.text();
+                                // var current_blockheight = Number( current_blockheight );
                                 //for purposes of calculating when I must force close, I take the htlc that pays me
                                 //and treat its htlc locktime as a threshold -- I must force close before I could
                                 //reach a blockheight where that htlc might return to its sender
@@ -2927,9 +2932,12 @@
                                 //add a buffer, because if you force close exactly 20 blocks before your inbound payment expires, you risk a race condition, as the first moment you can recover your money from your outbound payment is also the moment they get their money back, so if they sweep your payment with the preimage at that moment, and you grab the preimage from the blockchain (or mempool) and try to settle your inbound payment with it, in that same block they get to try to try to recover their money via the absolute timelock path, and then miners pick who actually gets the money, because that's a race condition
                                 var htlc_buffer = 10;
                                 //TODO: handle any errors returned by the fetch command below
-                                var bh_data = await fetch( `https://${hedgehog_server.explorer}/${hedgehog_server.network}api/blocks/tip/height` );
-                                var current_blockheight = await bh_data.text();
-                                var current_blockheight = Number( current_blockheight );
+                                var network_string = hedgehog_server.network_string;
+                                var my_network = network_string.split( "," );
+                                var current_blockheight = await chain_client.commander( my_network, "blockheight" );
+                                // var bh_data = await fetch( `https://${hedgehog_server.explorer}/${hedgehog_server.network}api/blocks/tip/height` );
+                                // var current_blockheight = await bh_data.text();
+                                // var current_blockheight = Number( current_blockheight );
                                 //TODO: reassess the value of this min_cltv; I think it should be updated to reflect the fact that my swap address uses a timelock of 2016 blocks
                                 var min_cltv = 294;
                                 var block_when_i_must_force_close = ( ( current_blockheight + min_cltv ) - relative_timelock ) - htlc_buffer;
@@ -3014,9 +3022,12 @@
                                 //add a buffer, because if you force close exactly 20 blocks before your inbound payment expires, you risk a race condition, as the first moment you can recover your money from your outbound payment is also the moment they get their money back, so if they sweep your payment with the preimage at that moment, and you grab the preimage from the blockchain (or mempool) and try to settle your inbound payment with it, in that same block they get to try to try to recover their money via the absolute timelock path, and then miners pick who actually gets the money, because that's a race condition
                                 var htlc_buffer = 10;
                                 //TODO: handle any errors returned by the fetch command below
-                                var bh_data = await fetch( `https://${hedgehog_server.explorer}/${hedgehog_server.network}api/blocks/tip/height` );
-                                var current_blockheight = await bh_data.text();
-                                var current_blockheight = Number( current_blockheight );
+                                var network_string = hedgehog_server.network_string;
+                                var my_network = network_string.split( "," );
+                                var current_blockheight = await chain_client.commander( my_network, "blockheight" );
+                                // var bh_data = await fetch( `https://${hedgehog_server.explorer}/${hedgehog_server.network}api/blocks/tip/height` );
+                                // var current_blockheight = await bh_data.text();
+                                // var current_blockheight = Number( current_blockheight );
                                 var block_when_i_must_force_close = ( ( current_blockheight + min_cltv ) - relative_timelock ) - htlc_buffer;
                                 console.log( 'current_blockheight:', current_blockheight, 'block_when_i_must_force_close:', block_when_i_must_force_close );
                                 var htlc_pmthash = ln_invoice_pmthash;
@@ -3566,7 +3577,6 @@
     <body>
         <h1>Hedgehog Server</h1>
         <script>
-            var blockchain = null;
             var init = async() => {
                 console.log( 'setting up testnet...' );
                 var promiseA = async () => {
@@ -3579,7 +3589,7 @@
                 var reply = await Promise.any( [ promiseA(), promiseB() ] );
                 if ( reply === "timed out" ) return alert( `could not connect to nostr relay, try again` );
                 var [ network_privkey, network_string ] = reply;
-                blockchain = network_string;
+                hedgehog_server.network_string = network_string;
                 console.log( 'testnet is set up!' );
                 console.log( 'getting coins...' );
                 var blockhash = await chain_client.commander( network_string.split( "," ), "genblock" );
@@ -3610,7 +3620,7 @@
                 console.log( 'blockhash:', blockhash, 'txhex:', txhex );
                 console.log( 'success! You have 500_000 sats' );
                 hedgehog_server.setUpComms();
-                var connection = await hedgehog_server.listenForComms( hedgehog_server.nostr_pubkey, network_string );
+                var connection = await hedgehog_server.listenForComms( hedgehog_server.nostr_pubkey );
                 hedgehog_server.asyncResolvingLoop();
                 console.log( 'server id:' );
                 console.log( server_id );
@@ -3624,11 +3634,10 @@
             //TODO: do not hard-code this nostr privkey; the server should make one at random and then set their rest server, if any, to use it
             hedgehog_server.nostr_privkey = "93227dfc17a3a80ff230dd7a95b6d024bffa1d89cf263b9bf3e2311af6ae265f";
             hedgehog_server.nostr_pubkey = super_nostr.getPubkey( hedgehog_server.nostr_privkey );
-            hedgehog_server.network_string = blockchain;
             var server_id = hedgehog_server.textToHex( JSON.stringify({
                 connection_type: "nostr",
                 connection_string: hedgehog_server.convertPubkeyAndRelaysToNprofile( "nprofile", hedgehog_server.nostr_pubkey, nostr_relays ),
-                network_string: blockchain,
+                network_string: hedgehog_server.network_string,
                 ln_support: false,
                 use_rest: hedgehog_server.use_rest,
                 rest_endpoint: hedgehog_server.use_rest ? hedgehog_server.rest_endpoint : undefined,
