--- a/lightningless-version.html
+++ b/lightningless-version.html
@@ -16,6 +16,7 @@
         <script src="file:///home/supertestnet/bitcoin_projects/testnet_generator/noble-secp256k1@1.2.14"></script>
         <script src="file:///home/supertestnet/bitcoin_projects/testnet_generator/base58check.js"></script>
         <script src="file:///home/supertestnet/bitcoin_projects/testnet_generator/bech32.js"></script>
+        <!-- <script src="https://supertestnet.github.io/brick-wallet/chain_client.js"></script> -->
         <!-- <script src="https://supertestnet.github.io/bitcoin-chess/js/qrcode.js"></script> -->
         <!-- <script src="https://supertestnet.github.io/bolt11_browser/bolt11.js"></script> -->
         <!-- <script src="https://unpkg.com/@dashincubator/ripemd160/ripemd160.js"></script> -->
